[gd_scene load_steps=8 format=3 uid="uid://dtkhnervfb8g8"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_1sbxb"]
[ext_resource type="FontFile" uid="uid://curjj8j0yb7o0" path="res://fonts/conthrax/conthrax-sb.otf" id="1_8r5dt"]
[ext_resource type="PackedScene" uid="uid://cimdip5w7semr" path="res://menu_stuff/settings_bool.tscn" id="2_or2vx"]
[ext_resource type="Texture2D" uid="uid://c8yym53ddmjaq" path="res://textures/end_panel_button.png" id="3_ard7o"]
[ext_resource type="PackedScene" uid="uid://qltep5mntvfb" path="res://menu_stuff/settings_button.tscn" id="3_b01vd"]

[sub_resource type="LabelSettings" id="LabelSettings_7jr6i"]
font = ExtResource("1_8r5dt")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_q8w7j"]
font = ExtResource("1_8r5dt")
font_size = 48

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1sbxb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.270588, 0.270588, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabelBox" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/SettingsLabelBox"]
layout_mode = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_7jr6i")
horizontal_alignment = 1

[node name="ScrollPanelBox" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ScrollPanelBox"]
layout_mode = 2
color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ScrollPanelBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollPanelBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SwitchRotaion" parent="VBoxContainer/ScrollPanelBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_or2vx")]
layout_mode = 2
label_text = "SWITCH ROTATION DIRECTION"
custom_method = "switch_rotation"

[node name="SettingsButton" parent="VBoxContainer/ScrollPanelBox/ScrollContainer/VBoxContainer" instance=ExtResource("3_b01vd")]
layout_mode = 2
label_text = "RESET PROGRESS"
custom_method = "reset_progress_press"

[node name="ExternalButtonsBox" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ExternalButtonsBox"]
layout_mode = 2

[node name="Container" type="Container" parent="VBoxContainer/ExternalButtonsBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackToMenuBox" type="MarginContainer" parent="VBoxContainer/ExternalButtonsBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="BackToMenu" type="TextureButton" parent="VBoxContainer/ExternalButtonsBox/HBoxContainer/BackToMenuBox"]
layout_mode = 2
texture_normal = ExtResource("3_ard7o")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/ExternalButtonsBox/HBoxContainer/BackToMenuBox"]
layout_mode = 2
text = "BACK TO MENU"
label_settings = SubResource("LabelSettings_q8w7j")
horizontal_alignment = 1

[node name="Container2" type="Container" parent="VBoxContainer/ExternalButtonsBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
